<resources>
    <string name="app_name">Deadliner</string>
    <string name="action_settings">Settings</string>
    <string name="deadline_name">Deadline name</string>
    <string name="name_hint">English essay</string>
    <string name="type_name">Deadline type</string>
    <string name="type_hint">Assignment</string>
    <string name="deadline_date">Due date</string>
    <string name="placeholder_date">7th March 2017</string>
    <string name="placeholder_time">8:14 PM</string>
    <string name="notify">Notify me every</string>
    <string name="unit_prompt">Select a unit of time</string>
    <string name="additional_notes">Additional notes</string>
    <string name="notes_hint">Key points of programming\nHand in via email</string>
    <string name="add_btn_text">Save deadline</string>
    <string name="no_data_found">No deadlines found!</string>
    <string-array name="time_units">
        <item>Hours</item>
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
    </string-array>
    <string-array name="hour_items">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>
    <string-array name="day_items">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="week_items">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="month_items">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
</resources>
