<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_deadline"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.co.alexks.deadliner.ui.AddDeadlineActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/nameLabelView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deadline_name" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:paddingBottom="16dp"
            android:singleLine="true" />

        <TextView
            android:id="@+id/typeLabelView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_name" />

        <EditText
            android:id="@+id/typeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_hint"
            android:paddingBottom="16dp"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:paddingBottom="8dp"
            android:paddingTop="8dp" />

        <TextView
            android:id="@+id/dueDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/deadline_date">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/currentDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="selectDate"
                android:text="@string/placeholder_date"
                android:textColor="@color/fullBlack"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/currentTimeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="selectTime"
                android:text="@string/placeholder_time"
                android:textColor="@color/fullBlack"
                android:textSize="24sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:paddingBottom="8dp"
            android:paddingTop="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <ImageView
                android:id="@+id/alert_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="5dip"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_notifications_black_24dp" />

            <TextView
                android:id="@+id/notifyMeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/notify" />

            <Spinner
                android:id="@+id/numberOfUnitsSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/unitSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:entries="@array/time_units"
                android:prompt="@string/unit_prompt" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/additional_notes" />

        <EditText
            android:id="@+id/notesEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/notes_hint"
            android:inputType="textMultiLine"
            android:paddingBottom="8dp" />

        <Button
            android:id="@+id/addDeadlineBtn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="saveDeadline"
            android:text="@string/add_btn_text" />

    </LinearLayout>

</RelativeLayout>
